; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_vfpf.c_bnx2x_vfop_mbx_qfilters_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bnx2x/extr_bnx2x_vfpf.c_bnx2x_vfop_mbx_qfilters_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnx2x = type { i32 }
%struct.bnx2x_virtf = type { i32 }
%struct.bnx2x_vfop_cmd = type { i32, i32 }
%struct.bnx2x_vfop = type { i32 }

@BNX2X_VFOP_MBX_Q_FILTERS_MACS = common dso_local global i32 0, align 4
@bnx2x_vfop_mbx_qfilters = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bnx2x*, %struct.bnx2x_virtf*, %struct.bnx2x_vfop_cmd*)* @bnx2x_vfop_mbx_qfilters_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bnx2x_vfop_mbx_qfilters_cmd(%struct.bnx2x* %0, %struct.bnx2x_virtf* %1, %struct.bnx2x_vfop_cmd* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.bnx2x*, align 8
  %6 = alloca %struct.bnx2x_virtf*, align 8
  %7 = alloca %struct.bnx2x_vfop_cmd*, align 8
  %8 = alloca %struct.bnx2x_vfop*, align 8
  store %struct.bnx2x* %0, %struct.bnx2x** %5, align 8
  store %struct.bnx2x_virtf* %1, %struct.bnx2x_virtf** %6, align 8
  store %struct.bnx2x_vfop_cmd* %2, %struct.bnx2x_vfop_cmd** %7, align 8
  %9 = load %struct.bnx2x*, %struct.bnx2x** %5, align 8
  %10 = load %struct.bnx2x_virtf*, %struct.bnx2x_virtf** %6, align 8
  %11 = call %struct.bnx2x_vfop* @bnx2x_vfop_add(%struct.bnx2x* %9, %struct.bnx2x_virtf* %10)
  store %struct.bnx2x_vfop* %11, %struct.bnx2x_vfop** %8, align 8
  %12 = load %struct.bnx2x_vfop*, %struct.bnx2x_vfop** %8, align 8
  %13 = icmp ne %struct.bnx2x_vfop* %12, null
  br i1 %13, label %14, label %28

14:                                               ; preds = %3
  %15 = load i32, i32* @BNX2X_VFOP_MBX_Q_FILTERS_MACS, align 4
  %16 = load i32, i32* @bnx2x_vfop_mbx_qfilters, align 4
  %17 = load %struct.bnx2x_vfop_cmd*, %struct.bnx2x_vfop_cmd** %7, align 8
  %18 = getelementptr inbounds %struct.bnx2x_vfop_cmd, %struct.bnx2x_vfop_cmd* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @bnx2x_vfop_opset(i32 %15, i32 %16, i32 %19)
  %21 = load %struct.bnx2x*, %struct.bnx2x** %5, align 8
  %22 = load %struct.bnx2x_virtf*, %struct.bnx2x_virtf** %6, align 8
  %23 = load i32, i32* @bnx2x_vfop_mbx_qfilters, align 4
  %24 = load %struct.bnx2x_vfop_cmd*, %struct.bnx2x_vfop_cmd** %7, align 8
  %25 = getelementptr inbounds %struct.bnx2x_vfop_cmd, %struct.bnx2x_vfop_cmd* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @bnx2x_vfop_transition(%struct.bnx2x* %21, %struct.bnx2x_virtf* %22, i32 %23, i32 %26)
  store i32 %27, i32* %4, align 4
  br label %31

28:                                               ; preds = %3
  %29 = load i32, i32* @ENOMEM, align 4
  %30 = sub nsw i32 0, %29
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %28, %14
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local %struct.bnx2x_vfop* @bnx2x_vfop_add(%struct.bnx2x*, %struct.bnx2x_virtf*) #1

declare dso_local i32 @bnx2x_vfop_opset(i32, i32, i32) #1

declare dso_local i32 @bnx2x_vfop_transition(%struct.bnx2x*, %struct.bnx2x_virtf*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
